--- a/game_info.html
+++ b/game_info.html
@@ -38,9 +38,9 @@
             style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
 
-    <!-- banner -->
-    <div class="sub-banner">
-        <!-- Navbar -->
+	<!-- Header -->
+	<div class="header">
+		<!-- Navbar -->
 		<nav class="navbar navbar-default">
 			<div class="container">
 				<div class="navbar-header transparent">
@@ -60,17 +60,22 @@
 						<li class="hover-effect"><a href="games.html">Games</a></li>
 						<li class="hover-effect"><a href="news.html">News</a></li>
 						<li class="hover-effect"><a href="contactus.html">Contact</a></li>
-						<li class="hover-effect"><a href="./login.html">Login</a></li>
 						<li><a class="hover-effect" id="profile" href="./profile.html">
 								<img class="desk_only" src="images/login.svg" />
 								<span class="mob_only">Profile</span>
 							</a>
+							<ul id="sub_menu" style="display: none;">
+								<li><a href="./login.html">Login</a></li>
+								<li><a href="./signup.html">Sign Up</a></li>
+							</ul>
 						</li>
 					</ul>
 				</div>
 			</div>
 		</nav>
-    </div>
+		<!-- //Navbar -->
+	</div>
+	<!-- //Header -->
 
     <div class="blog">
         <div class="container">
