--- a/games.html
+++ b/games.html
@@ -39,8 +39,9 @@
 			style="display:none;visibility:hidden"></iframe></noscript>
 	<!-- End Google Tag Manager (noscript) -->
 
-	<!-- banner -->
-	<div class="sub-banner">
+	<!-- Header -->
+	<div class="header">
+		<!-- Navbar -->
 		<nav class="navbar navbar-default">
 			<div class="container">
 				<div class="navbar-header transparent">
@@ -60,18 +61,23 @@
 						<li class="hover-effect active"><a href="games.html">Games</a></li>
 						<li class="hover-effect"><a href="news.html">News</a></li>
 						<li class="hover-effect"><a href="contactus.html">Contact</a></li>
-						<li class="hover-effect"><a href="./login.html">Login</a></li>
 						<li><a class="hover-effect" id="profile" href="./profile.html">
 								<img class="desk_only" src="images/login.svg" />
 								<span class="mob_only">Profile</span>
 							</a>
+							<ul id="sub_menu" style="display: none;">
+								<li><a href="./login.html">Login</a></li>
+								<li><a href="./signup.html">Sign Up</a></li>
+							</ul>
 						</li>
 					</ul>
 				</div>
 			</div>
 		</nav>
+		<!-- //Navbar -->
 	</div>
-	<!-- banner -->
+	<!-- //Header -->
+
 	<div class="new-ltpwr-agile new_games">
 
 		<div class="container">
@@ -127,28 +133,41 @@
 		<div class="container">
 			<h2>All games</h2>
 			<ul class="sorter">
-				<a href="">
-					<li class="active">Top Games</li>
-				</a>
-				<a href="">
-					<li>Action</li>
-				</a>
-				<a href="">
-					<li>Adventure</li>
-				</a>
-				<a href="">
-					<li>Cards</li>
-				</a>
-				<a href="">
+				<a href=" " 1="">
 					<li>Family</li>
-				</a>
-				<a href="">
+				</a><a href=" ">
 					<li>Puzzle</li>
-				</a>
-				<a href="">
+				</a><a href=" ">
+					<li>Action</li>
+				</a><a href=" ">
+					<li>Kids</li>
+				</a><a href=" ">
+					<li>Endless</li>
+				</a><a href=" ">
 					<li>Sports</li>
-				</a>
-			</ul>
+				</a><a href=" ">
+					<li>Strategy</li>
+				</a><a href=" ">
+					<li>Big kids</li>
+				</a><a href=" ">
+					<li>Adventure</li>
+				</a><a href=" ">
+					<li>Young Kids</li>
+				</a><a href=" ">
+					<li>Educational</li>
+				</a><a href=" ">
+					<li>Board</li>
+				</a><a href=" ">
+					<li>Match 3</li>
+				</a><a href=" ">
+					<li>Platformer</li>
+				</a><a href=" ">
+					<li>Multiplayer</li>
+				</a><a href=" ">
+					<li>Memory</li>
+				</a><a href=" ">
+					<li>Cards</li>
+				</a></ul>
 			<div class="gallery-grids">
 				<div class="new-grid-ltpwrl gallery-grid view view-eighth zoom-img">
 					<img class="img-responsive zoom-img" src="images/440x280.jpg" alt=" ">
