--- a/index.html
+++ b/index.html
@@ -60,11 +60,14 @@
 						<li class="hover-effect"><a href="games.html">Games</a></li>
 						<li class="hover-effect"><a href="news.html">News</a></li>
 						<li class="hover-effect"><a href="contactus.html">Contact</a></li>
-						<li class="hover-effect"><a href="./login.html">Login</a></li>
 						<li><a class="hover-effect" id="profile" href="./profile.html">
 								<img class="desk_only" src="images/login.svg" />
 								<span class="mob_only">Profile</span>
 							</a>
+							<ul id="sub_menu" style="display: none;">
+								<li><a href="./login.html">Login</a></li>
+								<li><a href="./signup.html">Sign Up</a></li>
+							</ul>
 						</li>
 					</ul>
 				</div>
@@ -77,21 +80,6 @@
 	<div class="container">
 		<!-- services-->
 		<div class="col-lg-8 col-12">
-			<div class="game_page_links">
-				<a href="games.html">
-					<div class="page_links" style="background:rgba(110, 135, 251, 0.2);">
-						<img src="images/emoji.svg" />
-						<span style="color: #6E87FB;">Hey , let’s play together!</span>
-					</div>
-				</a>
-				<a href="games.html">
-					<div class="page_links" style="background:rgba(218, 47, 150, 0.2);">
-						<img src="images/game.svg" />
-						<span style="color: #DA2F96;">New games every week!</span>
-					</div>
-				</a>
-			</div>
-
 			<div class="services-agileits-ltpwrlayouts main_video_bg">
 				<div class="container videobg_block">
 					<ul id="flexiselDemo1">
@@ -164,7 +152,7 @@
 								<a href="games.html">
 									<img class="section_image" src="images/adventure.svg" />
 								</a>
-								<h4>Adventures</h4>
+								<h4>Adventure</h4>
 							</div>
 						</li>
 						<li>
@@ -433,21 +421,6 @@
 				<script type="text/javascript" src="js/jquery.flexisel.js"></script>
 			</div>
 			<!-- //popular -->
-
-			<div class="game_page_links">
-				<a href="games.html">
-					<div class="page_links" style="background:rgba(93, 173, 236, 0.2);">
-						<img src="images/smile.svg" />
-						<span style="color: #5DADEC;">Уou can get select any game you want!</span>
-					</div>
-				</a>
-				<a href="games.html">
-					<div class="page_links" style="background:rgba(110, 135, 251, 0.2);">
-						<img src="images/hands.svg" />
-						<span style="color: #6E87FB;">Join us now!</span>
-					</div>
-				</a>
-			</div>
 
 			<!-- adventures -->
 			<div class="trend-ltpwrlayouts">
@@ -781,15 +754,6 @@
 					});
 				</script>
 				<script type="text/javascript" src="js/jquery.flexisel.js"></script>
-			</div>
-
-			<div class="game_page_links">
-				<a href="games.html">
-					<div class="page_links" style="background:rgba(134, 154, 247, 0.2);">
-						<span class="last_block">See Other Games</span>
-						<img src="images/btn-cicle.svg" />
-					</div>
-				</a>
 			</div>
 		</div>
 
