--- a/login.html
+++ b/login.html
@@ -40,46 +40,50 @@
             style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
 
-    <!-- banner -->
-    <div class="sub-banner">
-        <!-- Navbar -->
-        <nav class="navbar navbar-default">
-            <div class="container">
-                <div class="navbar-header transparent">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
-                        aria-expanded="false" aria-controls="navbar">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a href="index.html"><img src="./images/appptika-logo 1.png" alt=""></a>
-                </div>
-                <div id="navbar" class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav navbar-right">
-                        <li class="hover-effect"><a href="index.html">Home</a></li>
-                        <li class="hover-effect"><a href="about.html">About</a></li>
-                        <li class="hover-effect"><a href="games.html">Games</a></li>
-                        <li class="hover-effect"><a href="news.html">News</a></li>
-                        <li class="hover-effect"><a href="contactus.html">Contact</a></li>
-                        <li class="hover-effect active"><a href="./login.html">Login</a></li>
-                        <li><a class="hover-effect" id="profile" href="./profile.html">
-                                <img class="desk_only" src="images/login.svg" />
-                                <span class="mob_only">Profile</span>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </div>
-    <!-- banner -->
+	<!-- Header -->
+	<div class="header">
+		<!-- Navbar -->
+		<nav class="navbar navbar-default">
+			<div class="container">
+				<div class="navbar-header transparent">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+						aria-expanded="false" aria-controls="navbar">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					<a href="index.html"><img src="./images/appptika-logo 1.png" alt=""></a>
+				</div>
+				<div id="navbar" class="navbar-collapse collapse">
+					<ul class="nav navbar-nav navbar-right">
+						<li class="hover-effect"><a href="index.html">Home</a></li>
+						<li class="hover-effect"><a href="about.html">About</a></li>
+						<li class="hover-effect"><a href="games.html">Games</a></li>
+						<li class="hover-effect"><a href="news.html">News</a></li>
+						<li class="hover-effect"><a href="contactus.html">Contact</a></li>
+						<li><a class="hover-effect" id="profile" href="./profile.html">
+								<img class="desk_only" src="images/login.svg" />
+								<span class="mob_only">Profile</span>
+							</a>
+							<ul id="sub_menu" style="display: none;">
+								<li><a href="./login.html">Login</a></li>
+								<li><a href="./signup.html">Sign Up</a></li>
+							</ul>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</nav>
+		<!-- //Navbar -->
+	</div>
+	<!-- //Header -->
     <div class="contact-agileinfo">
         <div class="container">
             <h2>Login</h2>
 
             <div class="col-md-12 contact-right-ltpwr framed">
-                <p class="form_descr"><i class="round_num">1.</i>Enter the mobile number you provided during
+                <p class="form_descr">Enter the mobile number you provided during
                     registration, which serves as your username, and your password.</p>
                 <form id="" role="form">
                     <div class="row">
