--- a/news.html
+++ b/news.html
@@ -40,8 +40,8 @@
 			style="display:none;visibility:hidden"></iframe></noscript>
 	<!-- End Google Tag Manager (noscript) -->
 
-	<!-- banner -->
-	<div class="sub-banner">
+	<!-- Header -->
+	<div class="header">
 		<!-- Navbar -->
 		<nav class="navbar navbar-default">
 			<div class="container">
@@ -62,18 +62,22 @@
 						<li class="hover-effect"><a href="games.html">Games</a></li>
 						<li class="hover-effect active"><a href="news.html">News</a></li>
 						<li class="hover-effect"><a href="contactus.html">Contact</a></li>
-						<li class="hover-effect"><a href="./login.html">Login</a></li>
 						<li><a class="hover-effect" id="profile" href="./profile.html">
 								<img class="desk_only" src="images/login.svg" />
 								<span class="mob_only">Profile</span>
 							</a>
+							<ul id="sub_menu" style="display: none;">
+								<li><a href="./login.html">Login</a></li>
+								<li><a href="./signup.html">Sign Up</a></li>
+							</ul>
 						</li>
 					</ul>
 				</div>
 			</div>
 		</nav>
+		<!-- //Navbar -->
 	</div>
-	<!-- banner -->
+	<!-- //Header -->
 	<div class="events-ltpwrlayouts">
 		<h2>News</h2>
 		<div class="col-md-7 events-left-agile-agileits-ltpwrlayouts">
@@ -119,8 +123,6 @@
 					<div class="item_info">
 						<ul>
 							<li><a href="#"><i class="glyphicon glyphicon-tag"></i>"genres"</a></li>
-							<li><i class="glyphicon glyphicon-calendar"></i>14.May.2021</li>
-
 						</ul>
 					</div>
 					<p>Aliquam suscipit neque massa, eu maximus felis gravida vel. Vestibulum lacinia risus risus, ut
@@ -142,8 +144,6 @@
 					<div class="item_info">
 						<ul>
 							<li><a href="#"><i class="glyphicon glyphicon-tag"></i>"genres"</a></li>
-							<li><i class="glyphicon glyphicon-calendar"></i>17.Aug.2021</li>
-
 						</ul>
 					</div>
 					<p>Aliquam suscipit neque massa, eu maximus felis gravida vel. Vestibulum lacinia risus risus, ut
@@ -165,8 +165,6 @@
 					<div class="item_info">
 						<ul>
 							<li><a href="#"><i class="glyphicon glyphicon-tag"></i>"genres"</a></li>
-							<li><i class="glyphicon glyphicon-calendar"></i>24.Aug.2021</li>
-
 						</ul>
 					</div>
 					<p>Aliquam suscipit neque massa, eu maximus felis gravida vel. Vestibulum lacinia risus risus, ut
@@ -188,8 +186,6 @@
 					<div class="item_info">
 						<ul>
 							<li><a href="#"><i class="glyphicon glyphicon-tag"></i>"genres"</a></li>
-							<li><i class="glyphicon glyphicon-calendar"></i>17.Aug.2021</li>
-
 						</ul>
 					</div>
 					<p>Aliquam suscipit neque massa, eu maximus felis gravida vel. Vestibulum lacinia risus risus, ut
@@ -211,8 +207,6 @@
 					<div class="item_info">
 						<ul>
 							<li><a href="#"><i class="glyphicon glyphicon-tag"></i>"genres"</a></li>
-							<li><i class="glyphicon glyphicon-calendar"></i>17.Aug.2021</li>
-
 						</ul>
 					</div>
 					<p>Aliquam suscipit neque massa, eu maximus felis gravida vel. Vestibulum lacinia risus risus, ut
@@ -234,8 +228,6 @@
 					<div class="item_info">
 						<ul>
 							<li><a href="#"><i class="glyphicon glyphicon-tag"></i>"genres"</a></li>
-							<li><i class="glyphicon glyphicon-calendar"></i>17.Aug.2021</li>
-
 						</ul>
 					</div>
 					<p>Aliquam suscipit neque massa, eu maximus felis gravida vel. Vestibulum lacinia risus risus, ut
@@ -257,8 +249,6 @@
 					<div class="item_info">
 						<ul>
 							<li><a href="#"><i class="glyphicon glyphicon-tag"></i>"genres"</a></li>
-							<li><i class="glyphicon glyphicon-calendar"></i>17.Aug.2021</li>
-
 						</ul>
 					</div>
 					<p>Aliquam suscipit neque massa, eu maximus felis gravida vel. Vestibulum lacinia risus risus, ut
@@ -280,8 +270,6 @@
 					<div class="item_info">
 						<ul>
 							<li><a href="#"><i class="glyphicon glyphicon-tag"></i>"genres"</a></li>
-							<li><i class="glyphicon glyphicon-calendar"></i>17.Aug.2021</li>
-
 						</ul>
 					</div>
 					<p>Aliquam suscipit neque massa, eu maximus felis gravida vel. Vestibulum lacinia risus risus, ut
@@ -303,8 +291,6 @@
 					<div class="item_info">
 						<ul>
 							<li><a href="#"><i class="glyphicon glyphicon-tag"></i>"genres"</a></li>
-							<li><i class="glyphicon glyphicon-calendar"></i>17.Aug.2021</li>
-
 						</ul>
 					</div>
 					<p>Aliquam suscipit neque massa, eu maximus felis gravida vel. Vestibulum lacinia risus risus, ut
@@ -326,8 +312,6 @@
 					<div class="item_info">
 						<ul>
 							<li><a href="#"><i class="glyphicon glyphicon-tag"></i>"genres"</a></li>
-							<li><i class="glyphicon glyphicon-calendar"></i>17.Aug.2021</li>
-
 						</ul>
 					</div>
 					<p>Aliquam suscipit neque massa, eu maximus felis gravida vel. Vestibulum lacinia risus risus, ut
