--- a/game_unlogged.html
+++ b/game_unlogged.html
@@ -39,9 +39,9 @@
 <!-- banner -->
 
 <body class="game">
-    <!-- banner -->
-    <div class="sub-banner">
-        <!-- Navbar -->
+	<!-- Header -->
+	<div class="header">
+		<!-- Navbar -->
 		<nav class="navbar navbar-default">
 			<div class="container">
 				<div class="navbar-header transparent">
@@ -61,35 +61,22 @@
 						<li class="hover-effect"><a href="games.html">Games</a></li>
 						<li class="hover-effect"><a href="news.html">News</a></li>
 						<li class="hover-effect"><a href="contactus.html">Contact</a></li>
-						<li class="hover-effect"><a href="./login.html">Login</a></li>
 						<li><a class="hover-effect" id="profile" href="./profile.html">
 								<img class="desk_only" src="images/login.svg" />
 								<span class="mob_only">Profile</span>
 							</a>
+							<ul id="sub_menu" style="display: none;">
+								<li><a href="./login.html">Login</a></li>
+								<li><a href="./signup.html">Sign Up</a></li>
+							</ul>
 						</li>
 					</ul>
 				</div>
 			</div>
 		</nav>
-    </div>
-    <!-- banner-->
-    <!-- breadcrumbs -->
-    <!--<div class="agileits_breadcrumbs">
-    <div class="container">
-        <div class="agileits_breadcrumbs_left">
-            <ul>
-                <li><a href="index.html">Home</a><i>|</i></li>
-                <li>Single</li>
-            </ul>
-        </div>
-        <div class="agileits_breadcrumbs_right">
-            <h3>Single</h3>
-        </div>
-        <div class="clearfix"> </div>
-    </div>
-</div>-->
-    <!-- //breadcrumbs -->
-    <!-- single -->
+		<!-- //Navbar -->
+	</div>
+	<!-- //Header -->
     <div class="blog">
         <div class="container">
             <div class="col-md-7 wthree_blog_left">
