--- a/terms.html
+++ b/terms.html
@@ -68,7 +68,7 @@
 							</a>
 							<ul id="sub_menu" style="display: none;">
 								<li><a href="./login.html">Login</a></li>
-								<li><a href="./signup.html">Sign Up</a></li>
+								<li><a href=" ">Sign Up</a></li>
 							</ul>
 						</li>
 					</ul>
