fixed size of images, added redirect links

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 					<ul id="flexiselDemo1">
 						<li>
 							<div class="trend-grid">
-								<a href="games.html">
+								<a href="/?page=games&cat=Family">
 									<img class="section_image" src="images/family.svg">
 								</a>
 								<h4>Family</h4>
@@ -93,7 +93,7 @@
 						</li>
 						<li>
 							<div class="trend-grid">
-								<a href="games.html">
+								<a href="/?page=games&cat=Puzzle">
 									<img class="section_image" src="images/puzzle.svg">
 								</a>
 								<h4>Puzzles</h4>
@@ -101,7 +101,7 @@
 						</li>
 						<li>
 							<div class="trend-grid">
-								<a href="games.html">
+								<a href="/?page=games&cat=Action">
 									<img class="section_image" src="images/action.svg">
 								</a>
 								<h4>Action</h4>
@@ -109,7 +109,7 @@
 						</li>
 						<li>
 							<div class="trend-grid">
-								<a href="games.html">
+								<a href="/?page=games&cat=Kids">
 									<img class="section_image" src="images/kids.svg">
 								</a>
 								<h4>Kids</h4>
@@ -117,7 +117,7 @@
 						</li>
 						<li>
 							<div class="trend-grid">
-								<a href="games.html">
+								<a href="/?page=games&cat=Endless">
 									<img class="section_image" src="images/endless.svg">
 								</a>
 								<h4>Endless</h4>
@@ -125,7 +125,7 @@
 						</li>
 						<li>
 							<div class="trend-grid">
-								<a href="games.html">
+								<a href="/?page=games&cat=Sports">
 									<img class="section_image" src="images/sports.svg">
 								</a>
 								<h4>Sports</h4>
@@ -133,7 +133,7 @@
 						</li>
 						<li>
 							<div class="trend-grid">
-								<a href="games.html">
+								<a href="/?page=games&cat=Strategy">
 									<img class="section_image" src="images/strategy.svg">
 								</a>
 								<h4>Strategy</h4>
@@ -141,7 +141,7 @@
 						</li>
 						<li>
 							<div class="trend-grid">
-								<a href="games.html">
+								<a href="/?page=games&cat=Big kids">
 									<img class="section_image" src="images/big.svg">
 								</a>
 								<h4>Big kids</h4>
@@ -149,7 +149,7 @@
 						</li>
 						<li>
 							<div class="trend-grid">
-								<a href="games.html">
+								<a href="/?page=games&cat=Adventure">
 									<img class="section_image" src="images/adventure.svg" />
 								</a>
 								<h4>Adventure</h4>
@@ -157,7 +157,7 @@
 						</li>
 						<li>
 							<div class="trend-grid">
-								<a href="games.html">
+								<a href="/?page=games&cat=Young Kids">
 									<img class="section_image" src="images/young.svg" />
 								</a>
 								<h4>Young Kids</h4>
@@ -165,7 +165,7 @@
 						</li>
 						<li>
 							<div class="trend-grid">
-								<a href="games.html">
+								<a href="/?page=games&cat=Educational">
 									<img class="section_image" src="images/education.svg" />
 								</a>
 								<h4>Educational</h4>
@@ -173,7 +173,7 @@
 						</li>
 						<li>
 							<div class="trend-grid">
-								<a href="games.html">
+								<a href="/?page=games&cat=Board">
 									<img class="section_image" src="images/board.svg" />
 								</a>
 								<h4>Board</h4>
@@ -181,7 +181,7 @@
 						</li>
 						<li>
 							<div class="trend-grid">
-								<a href="games.html">
+								<a href="/?page=games&cat=Match 3">
 									<img class="section_image" src="images/match.svg" />
 								</a>
 								<h4>Match 3</h4>
@@ -189,7 +189,7 @@
 						</li>
 						<li>
 							<div class="trend-grid">
-								<a href="games.html">
+								<a href="/?page=games&cat=Platformer">
 									<img class="section_image" src="images/platform.svg" />
 								</a>
 								<h4>Platformer</h4>
@@ -197,7 +197,7 @@
 						</li>
 						<li>
 							<div class="trend-grid">
-								<a href="games.html">
+								<a href="/?page=games&cat=Multiplayer">
 									<img class="section_image" src="images/multi.svg" />
 								</a>
 								<h4>Multiplayer</h4>
@@ -205,7 +205,7 @@
 						</li>
 						<li>
 							<div class="trend-grid">
-								<a href="games.html">
+								<a href="/?page=games&cat=Memory">
 									<img class="section_image" src="images/memory.svg" />
 								</a>
 								<h4>Memory</h4>
@@ -213,7 +213,7 @@
 						</li>
 						<li>
 							<div class="trend-grid">
-								<a href="games.html">
+								<a href="/?page=games&cat=Cards">
 									<img class="section_image" src="images/cards.svg" />
 								</a>
 								<h4>Cards</h4>
@@ -429,7 +429,7 @@
 						<img src="images/adventure.svg" />
 						<h2 class="title_section">Adventures</h2>
 					</div>
-					<a href="games.html">see more</a>
+					<a href="/?page=games&cat=Adventure">see more</a>
 				</div>
 				<ul id="flexiselDemo4">
 					<li>
@@ -513,7 +513,7 @@
 						<img src="images/action.svg" />
 						<h2 class="title_section">Action</h2>
 					</div>
-					<a href="games.html">see more</a>
+					<a href="/?page=games&cat=Action">see more</a>
 				</div>
 				<ul id="flexiselDemo5">
 					<li>
@@ -597,7 +597,7 @@
 						<img src="images/family.svg" />
 						<h2 class="title_section">Family</h2>
 					</div>
-					<a href="games.html">see more</a>
+					<a href="/?page=games&cat=Family">see more</a>
 				</div>
 				<ul id="flexiselDemo6">
 					<li>
@@ -680,7 +680,7 @@
 						<img src="images/puzzle.svg" />
 						<h2 class="title_section">Puzzles</h2>
 					</div>
-					<a href="games.html">see more</a>
+					<a href="/?page=games&cat=Puzzle">see more</a>
 				</div>
 				<ul id="flexiselDemo7">
 					<li>
