--- a/terms.html
+++ b/terms.html
@@ -82,7 +82,7 @@
 	<!-- about-->
 	<div class="about-agileinfo" id="about">
 		<div class="container">
-			<h2 style="font-weight: bold;">TERMS & CONDITIONS</h2>
+			<h2 class="terms_title">TERMS & CONDITIONS</h2>
 			<div class="terms">
 				<article>
 					<p>The following is a legal agreement between you ("you" or "User/s") and the content provider
