--- a/policy.html
+++ b/policy.html
@@ -103,11 +103,7 @@
                     Our processing of personal data will satisfy at least one of the following processing conditions:
                 </p>
                 <ul>
-                    <li>Consent. You have given consent to the processing for one or more specific purposes. You
-                        have
-                        the
-                        right to withdraw consent at any time but this will not affect the processing based on consent
-                        before its withdrawal;</li>
+                    <li>Consent. You have given consent to the processing for one or more specific purposes;</li>
                     <li>Necessary for the performance of a contract. The processing is necessary for the
                         performance
                         of a
