--- a/terms.html
+++ b/terms.html
@@ -138,14 +138,15 @@
 				</article>
 				<article>
 					<h4>USAGE OF CONTENT</h4>
-					<p>Usage of appptika.com content in the following cases is strictly forbidden: <br />
-						•&nbsp;Sale or distribution of content as digital content or as digital wallpapers (such as on
-						stock media websites);<br />
-						•&nbsp;Sale or distribution of content e.g. as posters, digital prints, music files, or physical
-						products, without adding any additional elements or otherwise adding value;<br />
-						•&nbsp;Depiction of identifiable persons in an offensive, pornographic, obscene, immoral,
-						defamatory, or libelous way.
-					</p>
+					<p>Usage of appptika.com content in the following cases is strictly forbidden: </p>
+					<ul>
+						<li>Sale or distribution of content as digital content or as digital wallpapers (such as on
+							stock media websites);</li>
+						<li>Sale or distribution of content e.g. as posters, digital prints, music files, or physical
+							products, without adding any additional elements or otherwise adding value;</li>
+						<li>Depiction of identifiable persons in an offensive, pornographic, obscene, immoral,
+							defamatory, or libelous way.</li>
+					</ul>
 				</article>
 				<article>
 					<h4>TERMINATION</h4>
